--- a/env/linux/exec.desktop
+++ b/env/linux/exec.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-Categories=Game;Application;
+Categories=Game;Application;OggyP;Simulation;
 Terminal=false
 Exec=${NAME}
 Path=${Path}
